# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.844 2009/03/17 17:00:21 ub Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.0 beta1 (2009/??/??)
 - (2009/03/17) Fixed bug# 3729 - Missing translation of "Customer history"
    in AgentTicketCustomer.
 - (2009/03/17) Fixed bug# 3713 - Apache-error if ticket has only internal
    articles.
 - (2009/03/06) Added article filter feature in TicketZoom.
 - (2009/03/01) Replaced dtl variable for image location "$Env{"Images"}" by
    using config option "$Config{"Frontend::ImagePath"}" to remove not needed
    $Env{} "alias". Added "$Config{"Frontend::JavaScriptPath"}" for java script
    and "$Config{"Frontend::CSSPath"}" for css directory.
 - (2009/02/27) Added feature to show the ticket title or the last
    customer subject in TicketOverviewSmall.
 - (2009/02/27) Added enhancement bug# 3271 Added accessibility of
    Kernel::System::CustomerUser (CustomerUserObject) to bin/cgi-bin/rpc.pl
    (SOAP handle).
 - (2009/02/17) Added group permission support for bulk feature (config via
    SysConfig -> Ticket -> Core::TicketBulkAction).
 - (2009/02/17) Added read only permission support for watched tickets.
 - (2009/02/17) Added agent notification support for watched tickets (config
    via perferences setting for each agent).
 - (2009/02/11) Fixed ticket# 2009020942001554 - generic agent is logging many
    debug infos into log file.
 - (2009/02/09) Fixed bug# 3075 - IntroUpgrade Text is not shown during package
    upgrade in admin interface of package manager.
 - (2009/02/09) Implement the same identifier handling for customer as for
    user. This effects the files Kernel/Ouptut/HTML/*/CustomerNavigationBar.dtl
    and Kernel/Ouptut/HTML/Layout.pm.