@@ -2,7 +2,7 @@
 # Kernel/Modules/AdminQueue.pm - to add/update/delete queues
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: AdminQueue.pm,v 1.50 2009/02/20 12:04:29 mh Exp $
+# $Id: AdminQueue.pm,v 1.51 2009/03/24 06:45:25 tr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -21,7 +21,7 @@ use Kernel::System::Signature;
 use Kernel::System::SystemAddress;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.50 $) [1];
+$VERSION = qw($Revision: 1.51 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -299,8 +299,8 @@ sub _Mask {
     }
     my %CleanHash = %Data;
     for my $Key ( keys %Data ) {
-        if ( $CleanHash{$Key} eq $QueueName || $CleanHash{$Key} =~ /^$QueueName\:\:/ ) {
-            delete( $CleanHash{$Key} );
+        if ( $CleanHash{$Key} eq $QueueName || $CleanHash{$Key} =~ /^\Q$QueueName\E\:\:/ ) {
+            delete $CleanHash{$Key} ;
         }
     }
     $Param{QueueOption} = $Self->{LayoutObject}->AgentQueueListOption(
